--- a/src/app/courses-list/courses-list.component.html
+++ b/src/app/courses-list/courses-list.component.html
@@ -1,6 +1,6 @@
 <ul>
   <div *ngFor="let course of coursesObservable | async">
-    <alert type="info" [dismissible]="false" ]>
+    <alert type="info" [dismissible]="false">
       <h3><a href="#">{{course.title}}</a></h3>
       <p>{{course.description}}</p>
     <div>
